--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.1.2"
+    "react-redux": "^8.1.2",
+    "sharp": "^0.32.5"
   },
   "engines": {
     "node": "^16.13.0"
