--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "json-server": "^0.17.3",
+    "mongodb": "^6.1.0",
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-redux": "^8.1.2",
     "sharp": "^0.32.5"
   },
